@@ -1,6 +1,6 @@
-DIST parity-1.0.3.tar.gz 352647 RMD160 551a9e8d079a97348644b27493efd71470aef1b7 SHA1 3c399e1d398d4cc97e0ae13b4ac2f0c880bdbe9b SHA256 9ac3e08599def7887c8b4c214dbecb5f13dc06867033d3352116e7e3a8decbd4
 DIST parity-1.0.4.tar.gz 358864 RMD160 b5cd7c14443cf500b7a52c6a1c7df056ec6833cf SHA1 03ad572f5491232ad834a04212dc7fa24fb0b3c7 SHA256 63a48b932ec004efe7e9fd5934a878c49fddaec97187a5682e6246dbd8f8d232
-EBUILD parity-1.0.3.ebuild 867 RMD160 22aae2906b934b95015182038f09aabee1c2f27a SHA1 169c4a5009ef8dfdde782045cb43ec233bef5478 SHA256 c0f0e342150dc5f562bc806cabdd5bb911fc1c97c768131f301c29a0e225f2cc
+DIST parity-1.0.5.tar.gz 373919 RMD160 dd1b1b45d6f25df2a2721b7c4b0b80b15f5af3d5 SHA1 e011f26bd213acbc6b6be4b8a00b6455f716e58a SHA256 2c5a59c03467cedc9277997b1e368635339f5f0551b8a10221601b6da0b126b5
 EBUILD parity-1.0.4.ebuild 867 RMD160 22aae2906b934b95015182038f09aabee1c2f27a SHA1 169c4a5009ef8dfdde782045cb43ec233bef5478 SHA256 c0f0e342150dc5f562bc806cabdd5bb911fc1c97c768131f301c29a0e225f2cc
-MISC ChangeLog 542 RMD160 3bc9365ad3f6ba60c6d21b6a8150f7616ef479cb SHA1 251429991ac1d6ddd9124fbb282adbbeceaf0a16 SHA256 5268fa2c8e638d392383c9f7d5d92fbce6bfc0b2cd4cb4963c76dd27141240e5
+EBUILD parity-1.0.5.ebuild 1522 RMD160 7edcfc62a2a7356d833992a28138a79c670eae42 SHA1 57ccda99819f58dd201e7ee43555d56bfdf7eead SHA256 546975c3a9a8d6962ee061ad3bc8e0102253af45227f1dc9cafa06778f4eeeda
+MISC ChangeLog 703 RMD160 f8b7024ad23c6979f75dfcfbb0d9a17c6997be6c SHA1 fd4a2d5201ad3dab9d3e65152e35a7d84e30c127 SHA256 d3a5e9dfde840a2b9444167f74f0f1f6036c971d7ce5bfa2c576ba377e407fc8
 MISC metadata.xml 255 RMD160 5cf1b4dac09b88b5d9d409a808c902351565c87d SHA1 18362d69850fd6e1cfdd5af125ca3676e439072e SHA256 fbdb7a8bcb38969ff60fddf3131f3ee837da046a77d73c22b27e81fb05233a45
