@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*parity-1.0.5 (13 May 2008)
+
+  13 May 2008; <mduft@gentoo.org> -parity-1.0.3.ebuild,
+  +parity-1.0.5.ebuild:
+  added ebuild for 1.0.5, removed ebuild for 1.0.3
+
 *parity-1.0.4 (17 Apr 2008)
 
   17 Apr 2008; Markus Duft <mduft@gentoo.org> metadata.xml,
